deployment/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prodcustomer-vs
spec:
  hosts:
    - rpdemoapi.sreyo.in
    # - demo-api.managedorg.io //i.e the complete url of our domain
  gateways:
    - gateway
  http:
    - route:
        - destination:
            host: rpclient-service.default.svc.cluster.local
            port:
              number: 3000
